# hiring-challenge-devops-python

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API.md  Dockerfile  Makefile  README.md  docker-compose.yml  init.sql  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py
app/: config.py  database.py  etag.py  health.py  logging.py  main.py  metrics.py  middleware.py  models.py  routers.py  tracing.py
cli/: main.py
tests/: conftest.py  test_api.py  test_cli.py
